# rust_plantuml_client

./: Cargo.toml  README.md  cache55.txt
.github/workflows/: rust.yml
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/std/error/: trait.Error.js
docs/rust_plantuml_client/: all.html  enum.LibraryError.html  fn.compress_plant_uml_code.html  fn.get_svg.html  index.html  sidebar-items.js
docs/rust_plantuml_client/plantuml_mod/: fn.compress_plant_uml_code.html  fn.get_svg.html  index.html  sidebar-items.js
docs/src/rust_plantuml_client/: lib.rs.html  plantuml_mod.rs.html
examples/: example_1.rs
src/: lib.rs  plantuml_mod.rs
tests/: integration_test.rs
tmp/: temp54.txt  temp55.txt
